chapter05_argocd/app/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-by-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
#  - host: app.argocd.example.com
  - host: argo.lab.f5jp-handson.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: handson
            port:
              name: http
